fix: css alignments

--- a/assets/styles/elements/button.css
+++ b/assets/styles/elements/button.css
@@ -36,6 +36,15 @@
     border: 0.0625rem solid var(--color-primary);
 }
 
+.button--outlined-shadowed {
+    box-shadow: 0 0.25rem 1rem 0 #00000040;
+    transition: box-shadow 0.3s ease;
+}
+
+.button--outlined-shadowed:hover {
+    box-shadow: 0 0.25rem 1rem 0 var(--color-primary-darker);
+}
+
 .button--round {
     border-radius: 50%;
     padding: 1.25rem;
@@ -44,6 +53,7 @@
     align-items: center;
     justify-content: center;
     box-shadow: 0 0.25rem 1rem 0 #00000040;
+    transition: box-shadow 0.3s ease;
 }
 
 .button--round:hover {
